First major refactor, added lots of safety for resources