@@ -26,21 +26,39 @@ import jdk.internal.org.objectweb.asm.ClassWriter;
 import jdk.internal.org.objectweb.asm.MethodVisitor;
 import jdk.internal.org.objectweb.asm.Opcodes;
 
+/**
+ * This is a utility to patch running JVMs with the recent Log4j vulnerability.
+ *
+ * We only recommend trying this if you cannot restart a critical service with
+ * the recommended log4j 2.15.0 or jndi properties patch.
+ *
+ * Please note this utility will only detect JVMs running as the same user as
+ * this process.
+ *
+ * This utility creates a JavaAgent to attach to your running JVMs and
+ * transforms the org/apache/logging/log4j/core/lookup/JndiLookup class
+ *
+ * If running on Java 11+ you'll need to add --add-exports to get access to
+ * ClassWriter and MonitoredHost
+ */
 public class Log4jPatch {
 
+  private static String JNDI_CLASS_TO_PATCH = "org/apache/logging/log4j/core/lookup/JndiLookup";
+
   public static void agentmain(String args, Instrumentation inst) {
+
     System.out.println("Loading Java Agent.");
 
     ClassFileTransformer transformer = new ClassFileTransformer() {
         public byte[] transform(ClassLoader loader, String className, Class<?> classBeingRedefined,
                                 ProtectionDomain protectionDomain, byte[] classfileBuffer) {
-          if ("org/apache/logging/log4j/core/lookup/JndiLookup".equals(className)) {
+          if (JNDI_CLASS_TO_PATCH.equals(className)) {
             System.out.println("Transforming " + className + " (" + loader + ")");
-            ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS);
-            MethodInstrumentorClassVisitor cv = new MethodInstrumentorClassVisitor(cw);
-            ClassReader cr = new ClassReader(classfileBuffer);
-            cr.accept(cv, 0);
-            return cw.toByteArray();
+            ClassWriter classWriter = new ClassWriter(ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS);
+            MethodInstrumentorClassVisitor classVisitor = new MethodInstrumentorClassVisitor(classWriter);
+            ClassReader classReader = new ClassReader(classfileBuffer);
+            classReader.accept(classVisitor, 0);
+            return classWriter.toByteArray();
           } else {
             return null;
           }
@@ -48,11 +66,11 @@ public class Log4jPatch {
       };
     inst.addTransformer(transformer, true);
 
-    for (Class c : inst.getAllLoadedClasses()) {
-      if ("org.apache.logging.log4j.core.lookup.JndiLookup".equals(c.getName())) {
-        System.out.println("Patching " + c + " (" + c.getClassLoader() + ")");
+    for (Class aClass : inst.getAllLoadedClasses()) {
+      if ("org.apache.logging.log4j.core.lookup.JndiLookup".equals(aClass.getName())) {
+        System.out.println("Patching " + aClass + " (" + aClass.getClassLoader() + ")");
         try {
-          inst.retransformClasses(c);
+          inst.retransformClasses(aClass);
         } catch (UnmodifiableClassException uce) {
           System.out.println(uce);
         }
@@ -95,76 +113,132 @@ public class Log4jPatch {
     }
   }
 
+  // Name of this class, used for filtering myself out of the patching process
   private static String myName = Log4jPatch.class.getName();
 
-  private static void loadInstrumentationAgent(String[] pids) throws Exception {
+  private static void patchAllJVMs(String[] pids) throws Exception {
+
+    File jarFile = null;
+    try {
+      jarFile = createAgentJar();
+
+      for (String pid : pids) {
+        patchJVM(jarFile, pid);
+      }
+    }
+    finally {
+      if (jarFile != null) {
+        boolean deleted = jarFile.delete();
+        if (!deleted) {
+          System.err.println("Failed to delete " + jarFile.getAbsolutePath());
+        }
+      }
+    }
+  }
+
+  private static void patchJVM(File jarFile, String pid) {
+    if (pid != null) {
+      try {
+        VirtualMachine vm = VirtualMachine.attach(pid);
+        vm.loadAgent(jarFile.getAbsolutePath());
+      } catch (Exception e) {
+        System.err.println(e);
+        System.err.println("\nCouldn't load the agent into JVM process " + pid);
+        return;
+      }
+      System.out.println("\nSuccessfully loaded the agent into JVM process " + pid);
+      System.out.println("  Look at stdout of JVM process " + pid + " for more information");
+    }
+  }
+
+  private static File createAgentJar() throws Exception {
     String[] innerClasses = new String[] {"", /* this is for Log4jPatch itself */
-                                          "$1",
-                                          "$MethodInstrumentorClassVisitor",
-                                          "$MethodInstrumentorMethodVisitor"};
-    // Create agent jar file on the fly
-    Manifest m = new Manifest();
-    m.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
-    m.getMainAttributes().put(new Attributes.Name("Agent-Class"), myName);
-    m.getMainAttributes().put(new Attributes.Name("Can-Redefine-Classes"), "true");
-    m.getMainAttributes().put(new Attributes.Name("Can-Retransform-Classes"), "true");
+            "$1",
+            "$MethodInstrumentorClassVisitor",
+            "$MethodInstrumentorMethodVisitor"};
+    Manifest manifest = createManifest();
     File jarFile = File.createTempFile("agent", ".jar");
     jarFile.deleteOnExit();
-    JarOutputStream jar = new JarOutputStream(new FileOutputStream(jarFile), m);
-    for (String klass : innerClasses) {
-      String className = myName.replace('.', '/') + klass;
-      byte[] buf = getBytecodes(className);
-      jar.putNextEntry(new JarEntry(className + ".class"));
-      jar.write(buf);
+    try (JarOutputStream jar = new JarOutputStream(new FileOutputStream(jarFile), manifest)) {
+      for (String klass : innerClasses) {
+        String className = myName.replace('.', '/') + klass;
+        byte[] buf = getBytecodes(className);
+        jar.putNextEntry(new JarEntry(className + ".class"));
+        jar.write(buf);
+      }
     }
-    jar.close();
-    for (String pid : pids) {
-      if (pid != null) {
-        try {
-          VirtualMachine vm = VirtualMachine.attach(pid);
-          vm.loadAgent(jarFile.getAbsolutePath());
-        } catch (Exception e) {
-          System.out.println(e);
-          System.out.println("\nError: couldn't loaded the agent into JVM process " + pid);
-          continue;
+    return jarFile;
+  }
+
+  private static Manifest createManifest() {
+    Manifest manifest = new Manifest();
+    manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
+    manifest.getMainAttributes().put(new Attributes.Name("Agent-Class"), myName);
+    manifest.getMainAttributes().put(new Attributes.Name("Can-Redefine-Classes"), "true");
+    manifest.getMainAttributes().put(new Attributes.Name("Can-Retransform-Classes"), "true");
+    return manifest;
+  }
+
+  /*
+   * Get the byte code from this class
+   */
+  private static byte[] getBytecodes(String myName) throws Exception {
+    try (InputStream is = Log4jPatch.class.getResourceAsStream(myName + ".class");
+         ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
+
+      byte[] buf = new byte[4096];
+      int len;
+      if (is != null) {
+        while ((len = is.read(buf)) != -1) {
+          baos.write(buf, 0, len);
         }
-        System.out.println("\nSuccessfully loaded the agent into JVM process " + pid);
-        System.out.println("  Look at stdout of JVM process " + pid + " for more information");
+        return baos.toByteArray();
+      } else {
+        throw new Exception("InputStream was null");
       }
     }
   }
 
-  private static byte[] getBytecodes(String myName) throws Exception {
-    InputStream is = Log4jPatch.class.getResourceAsStream(myName + ".class");
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    byte[] buf = new byte[4096];
-    int len;
-    while ((len = is.read(buf)) != -1) baos.write(buf, 0, len);
-    buf = baos.toByteArray();
-    return buf;
-  }
-
+  /**
+   * Entrypoint into the program.
+   *
+   * @param args - Log4jPatch [<pid> [<pid> ..]]"
+   * @throws Exception - Note this program can crash fairly easily so make sure
+   * you are able to capture stderr
+   */
   public static void main(String args[]) throws Exception {
 
-    String pid[];
+    String jvmPidsToPatch[];
+
     if (args.length == 0) {
+
+      // Typecasting a null seems odd but getMonitoredHost needs you to do this.
       MonitoredHost host = MonitoredHost.getMonitoredHost((String)null);
-      Set<Integer> pids = host.activeVms();
-      pid = new String[pids.size()];
+      Set<Integer> activeVmPids = host.activeVms();
+      jvmPidsToPatch = new String[activeVmPids.size()];
       int count = 0;
-      for (Integer p : pids) {
-        MonitoredVm jvm = host.getMonitoredVm(new VmIdentifier(p.toString()));
+
+      // Convert numeric pids to Strings
+      for (Integer pid : activeVmPids) {
+        MonitoredVm jvm = host.getMonitoredVm(new VmIdentifier(pid.toString()));
         String mainClass = MonitoredVmUtil.mainClass(jvm, true);
+
+        // Filter out myself. Might be better to do this via my own pid
         if (!myName.equals(mainClass)) {
-          System.out.println(p + ": " + mainClass);
-          pid[count++] = p.toString();
+          System.out.println(pid + ": " + mainClass);
+          jvmPidsToPatch[count++] = pid.toString();
         }
       }
+
+      // If there are any JVMs left that we can attach to to then ask the user
+      // if they want to patch them.
+      // TODO This is a batch operation, we could offer a 1 by 1 option.
       if (count > 0) {
         System.out.print("\nPatch all JVMs? (y/N) : ");
         BufferedReader in = new BufferedReader(new InputStreamReader(System.in));
         String answer = in.readLine();
-        if (!"y".equals(answer)) {
+
+        if (!"y".equalsIgnoreCase(answer)) {
           return;
         }
       }
@@ -172,8 +246,11 @@ public class Log4jPatch {
       System.out.println("usage: Log4jPatch [<pid> [<pid> ..]]");
       return;
     } else {
-      pid = args;
+      // TODO sanitise the args
+      jvmPidsToPatch = args;
     }
-    loadInstrumentationAgent(pid);
+
+    // Do the live patching
+    patchAllJVMs(jvmPidsToPatch);
   }
 }
